--- a/index.html
+++ b/index.html
@@ -11,6 +11,41 @@
 
 <body>
 
+    <div class="big-card">
+        <div class="card-content container-fluid">
+            <h2 class="card-title">Log In</h2>
+            <p>Log in to your account to upload or download pictures, videos or music.</p>
+            <br><br>
+            <form action="">
+               <div class="row">
+                   <div class="col-xs-12">
+                    <input type="text" name="" id="" placeholder="Enter your email address">
+                   </div>
+               </div>
+            </form>
+            <div class="row">
+                <div class="col-xs-6">
+                    <p>Forgot password?</p>
+                </div>
+                <div class="col-xs-6">
+                    <button>Enter</button>
+                </div>
+            </div>
+            <hr>
+            <div class="row center-xs">
+            <div class="col-auto">Or Log In with</div>
+            </div>
+            <div class="row center-xs">
+                <div class="col-xs-6"><button>Facebook</button></div>
+                <div class="col-xs-6"><button>Google</button></div>
+            </div>
+            <div class="row center-xs">
+                <div class="col-auto">Don’t have an account yet? <a href="http://" target="_blank" rel="noopener noreferrer">Sign up</a> </div>
+            </div>
+        </div>
+        <img src="img/main-img.png" alt="" class="card-img">
+    </div>
+
 </body>
 
 </html>
